training and evaluation added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0a6552ad",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "56626a50",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "dcdca559",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "eddca5aa",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "73fed268",
    "metadata": {},
    "outputs": [
@@ -211,11 +211,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-05-31 12:52:42,602: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2025-05-31 12:52:42,604: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-05-31 12:52:42,605: INFO: common: created directory at: artifacts]\n",
-      "[2025-05-31 12:52:42,606: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-05-31 12:52:42,607: INFO: 4037744573: File already exists of size: ~ 11345 KB]\n"
+      "[2025-06-05 12:29:21,265: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-06-05 12:29:21,266: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-06-05 12:29:21,267: INFO: common: created directory at: artifacts]\n",
+      "[2025-06-05 12:29:21,267: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-06-05 12:29:24,458: INFO: 4037744573: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 11616915\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"adf745abc03891fe493c3be264ec012691fe3fa21d861f35a27edbe6d86a76b1\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: 24A3:2CBE0F:1651A8:315DD9:68414048\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Thu, 05 Jun 2025 06:59:23 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-hyd1100025-HYD\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1749106762.937548,VS0,VE1068\n",
+      "Vary: Authorization,Accept-Encoding\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 992b501ffc29342883e0f6a53cefa4e2c61262e1\n",
+      "Expires: Thu, 05 Jun 2025 07:04:23 GMT\n",
+      "Source-Age: 1\n",
+      "\n",
+      "]\n"
      ]
     }
    ],
@@ -234,6 +260,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ded42309",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04caf4f8",
    "metadata": {},
    "outputs": [],
    "source": []
