--- a/research/trails.ipynb
+++ b/research/trails.ipynb
@@ -14,11 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b7640213",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/shaikyasin/Documents/AIDS/Projects/Deep learning projects/chicken-disease-classification/research'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
   },
   {
    "cell_type": "code",
